@startuml

entity Product {
    * id : VARCHAR
    --
    * title : VARCHAR
    * description : TEXT
    * price : DECIMAL
    * quantity: INT
    * images : VARCHAR
    * category_id : VARCHAR
}

entity Category {
    * id : VARCHAR
    --
    * name : VARCHAR
}

entity User {
    * id : VARCHAR
    --
    * name : VARCHAR
    * email : VARCHAR
    * password : VARCHAR
    * class_id : VARCHAR
    * major_id : VARCHAR
}

entity Order {
    * id : VARCHAR
    --
    * user_id : VARCHAR
    * total_price : DECIMAL
    * status : VARCHAR
}

entity OrderItem {
    * id : VARCHAR
    --
    * order_id : VARCHAR
    * product_id : VARCHAR
    * quantity : INT
    * price : DECIMAL
}

Category ||--|{ Product : Contains
Major ||--|{ Class : Contains
Class ||--|{ User : Contains
User ||--o{ Order : Has
Order ||--|{ OrderItem : Has
Product ||--|{ OrderItem

@enduml
